<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prefs_app_news_category"
        android:key="pref_news_settings_category">
        <Preference
            android:key="pref_news_deleted_clear"
            android:title="@string/prefs_app_news_deleted_clear_header"
            android:summary="@string/prefs_app_news_deleted_clear_summary_empty"
            android:icon="@drawable/ic_trash_blue"
            />
        <Preference
            android:key="pref_news_hidden_clear"
            android:title="@string/prefs_app_news_hidden_clear_header"
            android:summary="@string/prefs_app_news_hidden_clear_summary_empty"
            android:icon="@drawable/ic_hide_blue"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_app_tourna_category"
        android:key="pref_schedule_settings_category">
        <ListPreference
            android:key="pref_schedule_events_reminders"
            android:title="@string/prefs_app_tourna_events_reminders_header"
            android:icon="@drawable/ic_reminder_blue"
            android:dialogTitle="@string/prefs_app_tourna_events_reminders_header"
            android:summary="@string/prefs_app_tourna_events_reminders"
            android:entries="@array/prefs_app_tourna_events_entries"
            android:entryValues="@array/prefs_app_tourna_events_entries_values"
            android:defaultValue="60"/>
        <Preference
            android:key="pref_schedule_events_clear"
            android:title="@string/prefs_app_tourna_events_clear_header"
            android:summary="@string/prefs_app_tourna_events_clear_summary_empty"
            android:icon="@drawable/ic_calendar_blue"
            android:dependency="pref_schedule_events_reminders"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_app_notif_category"
        android:key="pref_notif_settings_category">
    <CheckBoxPreference
        android:key="pref_notif_news_enable"
        android:title="@string/prefs_app_notif_news_header"
        android:summary="@string/prefs_app_notif_news"
        android:icon="@drawable/ic_prefs_notif_blue"
        android:defaultValue="true"
        />
        <CheckBoxPreference
            android:key="pref_notif_tournas_enable"
            android:title="@string/prefs_app_notif_tournas_header"
            android:summary="@string/prefs_app_notif_tournas"
            android:icon="@drawable/ic_prefs_notif_blue"
            android:defaultValue="true"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_app_about_category"
        android:key="pref_about_settings_category">
        <Preference
            android:key="pref_about_iconography"
            android:title="@string/prefs_app_about_iconography_header"
            android:summary="@string/prefs_app_about_iconography"
            android:icon="@drawable/ic_pref_iconography_blue"
            />
    </PreferenceCategory>
</PreferenceScreen>