<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_show_news"
        android:title="@string/action_show_news"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_news"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_show_ranking"
        android:title="@string/action_show_ranking"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_ranking"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_show_schedule"
        android:title="@string/action_show_schedule"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_tournas"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>
